--- a/src/components/Giftshop.css
+++ b/src/components/Giftshop.css
@@ -8,10 +8,10 @@
     margin: 16px;
     background-color: #d1d5db; /* bg-gray-300 */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* shadow-lg */
-    padding: 16px;
+    padding: 3px;
     transition: background-color 0.2s; /* transition-colors duration-200 */
     cursor: pointer;
-    padding-bottom: 30px;
+    padding-bottom: 8px;
     border-radius: 3%;
     margin-bottom: 30px;
   }
@@ -60,7 +60,7 @@
     height: 50%;
     max-height: 20em;
     border: 0px solid white;
-    border-radius: 3% 3% 0 0;
+    border-radius: 3% 3% 0% 0% ;
     object-fit: cover;
   }
 
@@ -70,20 +70,18 @@
   
   /* Content inside the card */
   .cardContent {
-    padding: 2px 16px;
+    padding: 4px  11px  2px 11px;
+    display: flex;
+    justify-content: space-between;
   }
   
   .cardContent h2 {
     font-size: 1.25rem; /* text-xl */
-    left: 5%;
     font-weight: bold;
     color: black;
   }
   
   .cardContent p {
-    position: absolute;
-    bottom: 5%;
-    right: 5%;
     font-size: 1.25rem; /* text-xl */
     color: black;
   }
